# Bracket

./: .gitignore  AGENTS.md  Changes  INSTALL  MANIFEST  MANIFEST.SKIP  META.json  META.yml  Makefile.PL  README  bracket.conf  bracket.psgi
.github/: copilot-instructions.md
data/: games.csv  prep_games.pl  prep_teams.pl  team_movement_through_bracket.pl  teams.indexed.csv
go-bracket/: Dockerfile  README.md  docker-compose.yml  go.mod
lib/: Bracket.pm
note/: 2026_DB_MIGRATION_RUNBOOK.md  2026_SCRAPE_IMPORT_PLAN.md  CI_WRANGLING.md  CLAWD_DEPLOYMENT.md  PROD_PERL5LIB_ROLLOUT.md  YEARLY_DB_GETTER_FUNCTIONS_CHECKLIST.md  legacy-images-deprecation.md
python-bracket/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
root/: edit_region_picks.tt  final_4_racket.tt  html_final4_head.tt  initial_email.tt  make_final4_picks.tt  no_late_edits.tt  save_final4_picks.tt  save_picks.tt  view_final4_picks.tt  view_region_status.tt
rust-bracket/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
rust-bracket/src/: main.rs
rust-bracket/src/auth/: mod.rs
rust-bracket/src/database/: mod.rs
rust-bracket/src/handlers/: auth.rs  bracket.rs  mod.rs
rust-bracket/src/middleware/: auth.rs
rust-bracket/src/models/: game.rs  mod.rs  pick.rs  player.rs  region.rs  region_score.rs  session.rs  team.rs  tournament.rs
rust-bracket/src/tournament/: mod.rs
script/: audit_pick_continuity.pl  deploy_bracket.pl  dump-schema.pl  import_2026_field.sql  migrate_2025_to_2026.sql  parent-gen.py  pass-hash.pl  test  test-env.sh  verify_2026.sql  (+1 more)
t/: 01app.t  (+25 more)
(+116 files in other folders)
